# neuroshell-ai-cli

./: README.md
neuroshell-cli/: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  EXAMPLES.md  GET_STARTED.md  LICENSE  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  SETUP.md  build.bat  build.sh  imgui.ini  run.bat  run_debug.bat  vcpkg.json
neuroshell-cli/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
neuroshell-cli/.github/workflows/: build.yml  release.yml
neuroshell-cli/config/: commands.json  neuroshell.conf  settings.json
neuroshell-cli/docs/: index.html
neuroshell-cli/include/: colors.h
neuroshell-cli/include/ai/: ai_client.h  http_client.h  simple_ai.h
neuroshell-cli/include/common/: types.h
neuroshell-cli/include/executor/: command_executor.h
neuroshell-cli/include/nlp/: command_mapper.h  parser.h
neuroshell-cli/include/terminal/: command_executor.h  terminal.h
neuroshell-cli/include/ui/: theme.h  ui.h
neuroshell-cli/include/utils/: config_loader.h  logger.h  safety.h
neuroshell-cli/installer/: setup.iss
neuroshell-cli/src/: main.cpp
neuroshell-cli/src/ai/: ai_client.cpp  http_client.cpp  simple_ai.cpp
neuroshell-cli/src/executor/: command_executor.cpp
neuroshell-cli/src/nlp/: command_mapper.cpp  parser.cpp
neuroshell-cli/src/terminal/: command_executor.cpp  terminal.cpp
neuroshell-cli/src/ui/: theme.cpp  ui.cpp  ui.cpp.backup
neuroshell-cli/src/utils/: config_loader.cpp  logger.cpp  safety.cpp
neuroshell-cli/tests/: CMakeLists.txt  test_command_mapper.cpp  test_parser.cpp  test_safety.cpp
